  mosquitto_new() because it is a client parameter rather than a connection
  parameter.
- mosquitto_new() now sets errno to indicate failure type.
- Add mosquitto_user_data_set() to allow user data pointer to be updated.
- Usernames were being lost when a non clean-session client reconnected,
  potentially causing problems with ACLs. This has been fixed.
- Significant improvement to memory handling on Windows.
- Fix db_dump reading of retained messages.
- Fix reloading of persistence_file and persistence_location.
- Add example of logging all messages to mysql.
- Add "int rc" parameter to disconnect callback to indicate whether disconnect
  was unexpected or the result of calling mosquitto_disconnect().
- Fix reloading of persistence location.
- Fix automatic client id generation on Windows.
- Fix missing COMPAT_ECONNRESET define on Windows.
- Fix broker crash on incorrect protocol number.
- mosquitto_loop_misq() can now return MOSQ_ERR_NO_CONN;
- Clients that had disconnected were not always being detected immediately on
  Linux. This has been fixed.
- Enforce client id limits in the broker.
- Client will now disconnect itself from the broker if it doesn't receive a
  PINGRESP in the keepalive period after sending a PINGREQ.
- Client will now send a PINGREQ if it has not received a message from the
  broker in keepalive seconds.

0.15 - 20120205
===============

- Add support for $SYS/broker/clients/maximum and $SYS/broker/clients/active
  topics.
- Add support for $SYS messages/byte per second received/sent topics.
- Updated mosquitto man page - $SYS hierarchy and signal support were out of
  date.
- Auto generated pub/sub client ids now include the hostname.
- Tool for dumping persistent DB contents is available in src/db_dump. It isn't
  installed by default.
- Enforce topic length checks in client library.
- Implement "once" and "lazy" bridge start types.
- Add new return type MOSQ_ERR_ERRNO to indicate that the errno variable should